<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".TarefaForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldTitulo"
            android:hint="@string/form_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"/>

        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldDescricao"
        android:hint="@string/form_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldDataPrevista"
            android:hint="@string/form_dataPrevista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldDataConclusao"
            android:hint="@string/form_dataConclusao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldCategoria"
            android:hint="@string/form_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldStatus"
            android:hint="@string/form_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"/>


    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/form_buttonSave"
        android:text="@string/button_save_categoria"
        android:layout_alignParentBottom="true"
        android:minHeight="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>